--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "expo-font": "~10.0.3",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
-    "expo-updates": "~0.10.12",
+    "expo-updates": "~0.10.13",
+    "intl": "^1.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.18.1",
