react-native-svg-transformer added and SignIn screen created

--- a/app.json
+++ b/app.json
@@ -9,6 +9,22 @@
     "splash": {
       "image": "./src/assets/splash.png",
       "backgroundColor": "#5636D3"
+    },
+    "packagerOpts": {
+      "config": "metro.config.js",
+      "sourceExts": [
+        "expo.ts",
+        "expo.tsx",
+        "expo.js",
+        "expo.jsx",
+        "ts",
+        "tsx",
+        "js",
+        "jsx",
+        "json",
+        "wasm",
+        "svg"
+      ]
     }
   },
   "name": "gofinances"
