--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3",
@@ -43,6 +43,7 @@
     "@types/react-native": "~0.64.12",
     "@types/styled-components": "^5.1.15",
     "@types/styled-components-react-native": "^5.1.2",
+    "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.3.5"
   },
   "private": true
